[package]
name = "eightfetch"
version = "1.0.0"
edition = "2021"
description = "Blazing fast system fetch tool — 63x faster than myfetch (C), 2.4x faster than fastfetch"
license = "MIT"
repository = "https://github.com/YOUR_USER/eightfetch"
homepage = "https://github.com/YOUR_USER/eightfetch"
keywords = ["fetch", "system-info", "neofetch", "fastfetch"]
categories = ["command-line-utilities", "system"]
readme = "README.md"

[[bin]]
name = "8fetch"
path = "src/main.rs"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[dependencies]
